[gd_scene load_steps=11 format=2]

[ext_resource path="res://engine/fonts/Pixel-Life.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://engine/sprites/ui/button_prompt/joypad_icons/ps4/0.png" type="Texture" id=2]
[ext_resource path="res://engine/scenes/ui/button_prompt/ButtonPrompt.tscn" type="PackedScene" id=3]
[ext_resource path="res://engine/classes/ScaleContainer.gd" type="Script" id=4]
[ext_resource path="res://engine/scenes/ui/multiple_choice_prompt/MultipleChoicePrompt.gd" type="Script" id=5]
[ext_resource path="res://engine/fonts/Pixel-Life.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 20
expand_margin_left = 15.0
expand_margin_right = 15.0
expand_margin_top = 15.0
expand_margin_bottom = 15.0
shadow_color = Color( 0.74902, 0.545098, 0.454902, 0.498039 )
shadow_offset = Vector2( 5, 5 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.156863 )
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 1.0

[node name="MultipleChoicePrompt" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -11.0
margin_bottom = -11.0
color = Color( 0, 0, 0, 0.74902 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.5
margin_top = -168.0
margin_right = 265.5
margin_bottom = 168.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="PanelContainer"]
margin_right = 531.0
margin_bottom = 336.0
mouse_filter = 1
custom_constants/separation = 36
dragger_visibility = 1

[node name="TitleLabel" type="Label" parent="PanelContainer/VSplitContainer"]
margin_right = 531.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Select difficulty for new game"
align = 1

[node name="VSplitContainer" type="VSplitContainer" parent="PanelContainer/VSplitContainer"]
margin_top = 66.0
margin_right = 531.0
margin_bottom = 336.0
mouse_filter = 1
custom_constants/separation = 31
dragger_visibility = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VSplitContainer/VSplitContainer"]
margin_right = 531.0
margin_bottom = 223.0
custom_constants/separation = 30

[node name="ScaleContainer" type="Container" parent="PanelContainer/VSplitContainer/VSplitContainer/VBoxContainer"]
margin_right = 521.6
margin_bottom = 88.0
rect_min_size = Vector2( 521.6, 88 )
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 8
script = ExtResource( 4 )
child_to_scale_with = NodePath("ChoiceContainer")

[node name="ChoiceContainer" type="VBoxContainer" parent="PanelContainer/VSplitContainer/VSplitContainer/VBoxContainer/ScaleContainer"]
margin_right = 652.0
margin_bottom = 110.0
rect_scale = Vector2( 0.8, 0.8 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button3" type="Button" parent="PanelContainer/VSplitContainer/VSplitContainer/VBoxContainer/ScaleContainer/ChoiceContainer"]
margin_right = 652.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 826.042, -30.6135 )
custom_fonts/font = SubResource( 3 )
text = "Easy - Samus has higher defence and offence"
flat = true
align = 0

[node name="Button2" type="Button" parent="PanelContainer/VSplitContainer/VSplitContainer/VBoxContainer/ScaleContainer/ChoiceContainer"]
margin_top = 40.0
margin_right = 652.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 3 )
text = "Normal - Recommended damage values"
flat = true
align = 0

[node name="Button" type="Label" parent="PanelContainer/VSplitContainer/VSplitContainer/VBoxContainer/ScaleContainer/ChoiceContainer"]
margin_top = 80.0
margin_right = 652.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 3 )
text = "Hard - Enemies deal much more damage and take less"

[node name="Description" type="Label" parent="PanelContainer/VSplitContainer/VSplitContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 531.0
margin_bottom = 223.0
custom_fonts/font = ExtResource( 6 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
autowrap = true

[node name="ButtonPrompts" type="HBoxContainer" parent="PanelContainer/VSplitContainer/VSplitContainer"]
margin_top = 254.0
margin_right = 531.0
margin_bottom = 270.0
size_flags_vertical = 8
custom_constants/separation = 17
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept" parent="PanelContainer/VSplitContainer/VSplitContainer/ButtonPrompts" instance=ExtResource( 3 )]
margin_left = 399.0
margin_right = 455.0
preview_text = "Select"
default_text = "multiplechoiceprompt_button_select"
default_action_key = "ui_accept"

[node name="Cancel" parent="PanelContainer/VSplitContainer/VSplitContainer/ButtonPrompts" instance=ExtResource( 3 )]
margin_left = 472.0
margin_right = 531.0
preview_text = "Cancel"
preview_texture = ExtResource( 2 )
default_text = "multiplechoiceprompt_button_cancel"
default_action_key = "ui_cancel"

[node name="Tween" type="Tween" parent="PanelContainer"]

[node name="Node2D" type="Node2D" parent="PanelContainer"]
visible = false

[node name="TemplateChoice" type="Label" parent="PanelContainer/Node2D"]
margin_left = -13.0
margin_top = 349.0
margin_right = 639.0
margin_bottom = 379.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "Hard - Enemies deal much more damage and take less"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="PanelContainer/Node2D/TemplateChoice"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}
